Implemented shopping cart with Express, TypeScript, Swagger and Mongoose.
