# src/controllers/products.ts
@@ -1,6 +1,5 @@
 import { Get, Query, Route, Tags } from "tsoa";
 import { AppService } from "../services/app.service";
-import { ProductModel } from "../schemas/product.entity";
 
 @Route("api/products")
 @Tags('product')
@@ -8,12 +7,12 @@ export default class ProductsController {
     appService: AppService = new AppService();
 
     @Get("/")
-    public async getProducts(): Promise<ProductModel[]> {
+    public async getProducts(): Promise<any> {
         return this.appService.getProducts();
     }
 
     @Get("/{productId}")
-    public async getProductById(@Query() id: number): Promise<ProductModel> {
+    public async getProductById(@Query() id: string): Promise<any> {
         return this.appService.getProductById(id);
     }
 }
