# src/schemas/product.entity.ts
@@ -1,13 +1,24 @@
-export interface ProductEntity {
-  id: string;
-  title: string;
-  description: string;
-  price: number;
-}
+import mongoose from "mongoose";
 
-export interface ProductModel {
-  id: number;
-  title: string;
-  description: string;
-  price: number;
-}
+// Product Model
+const ProductSchema = new mongoose.Schema({
+  id: {
+    type: String,
+    required: true,
+  },
+  title: {
+    type: String,
+    required: false,
+  },
+  description: {
+    type: String,
+    required: false,
+  },
+  price: {
+    type: Number,
+    required: false,
+  },
+});
+
+export const Product = mongoose.model("Product", ProductSchema);
+module.exports = { Product };
